tests/ui/parser/old-suffixes-are-really-forbidden.rs
fn main() {
    let a = 1_is; //~ ERROR invalid suffix
    let b = 2_us; //~ ERROR invalid suffix
}

// ferrocene-annotations: fls_2ed4axpsy9u0
// Integer Literals
